--- a/public/styles/indexStyle.css
+++ b/public/styles/indexStyle.css
@@ -268,19 +268,59 @@ input::placeholder{
   
 
  
-  .collapsible:after {
-    content: '▼';
+  .arrow {
     color: black;
     font-weight: bold;
     margin-left: auto;
     
   }
   
-  .active:after {
+  .active > .arrow {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
     transform: rotate(180deg);
   }
+
+  /*https://dev.to/proticm/styling-html-checkboxes-is-super-easy-302o*/
+  .checkbox {
+    margin-left: auto;
+    display: none;
+   /* display: inline-flex;*/
+    cursor: pointer;
+    position: relative;
+}
+
+.checkbox > input {
+    height: 25px;
+    width: 25px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+    border-radius: 4px;
+    outline: none;
+    transition-duration: 0.3s;
+    background-color: #eee;
+    cursor: pointer;
+  }
+
+.checkbox > input:checked {
+    background-color: #41B883;
+}
+
+.checkbox > input:checked + span::before {
+    content: '\2713';
+    display: block;
+    text-align: center;
+    color: #41B883;
+    position: absolute;
+    left: 0.7rem;
+    top: 0.2rem;
+}
+
+.checkbox > input:active {
+    border: 2px solid #34495E;
+}
   
   /* Style the collapsible content. Note: hidden by default */
   .course-contents {
@@ -373,7 +413,24 @@ input::placeholder{
   }
 
   #removeCourse{
-      background-color: #68CC58;
+    font-family: 'Comfortaa';
+    font-size: 16.5px;
+    border: none;
+    color: white;
+    padding: 12px 16px;
+    margin: 3px;
+    border-radius: 4px;
+    display: block;
+    background-color: #68CC58;
+  }
+
+  #cancelRemove{
+    border: none;
+    border-radius: 4px;
+    font-family: 'Comfortaa';
+    color: white;
+    padding: 12px 16px;
+    background-color: #CCB958;
   }
 
   #logout{
