--- a/views/partials/adminDropdown.ejs
+++ b/views/partials/adminDropdown.ejs
@@ -1,11 +1,13 @@
 <div class="dropdownMenu">
     <button onclick="dropdownMenu()" id="menubtn">≡</button>
+    
     <div id="myDropdown" class="menu-content">
         <a id="addCourse" href="addCourse">Add Course</a>
         <a id="modifyCourse" href="modifyCourses">Modify Course</a>
-        <a id="removeCourse" href="#remove">Remove Course</a>
+        <button type="button" id="removeCourse" onclick="hideButton();removeCoursesHandler();">Remove Course</button>
         <a id="logout" href="/logout">Logout</a>
     </div>
+    <button id="cancelRemove" style="display:none;"" onclick="showButton();cancelRemoveCoursesHandler();">X</button>
 </div>
 <script>
 
@@ -24,6 +26,16 @@
         });
     }
 
+    // Hide and show dropdown button when remove courses is clicked
+    function hideButton() {
+        document.getElementById("cancelRemove").style.display = "block";
+        document.getElementById("menubtn").style.display = "none";
+    }
+
+    function showButton(){
+        document.getElementById("cancelRemove").style.display = "none";
+        document.getElementById("menubtn").style.display = "block";
+    }
 
     /* When the user clicks on the button, 
     toggle between hiding and showing the dropdown content */
