--- a/public/styles/indexStyle.css
+++ b/public/styles/indexStyle.css
@@ -385,6 +385,16 @@ input::placeholder{
     background-color: black;
     color: white;
   }
+
+  #deleteCourses{
+    font-family: 'Comfortaa';
+    border: none;
+    padding: 12px 16px;
+    font-size: 15px;
+    border-radius: 4px;
+    background-color:#D6001C;
+    color: white;
+  }
   
   .dropdownMenu {
     position: relative;
