--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
                 <span class="fa fa-star fa-lg"></span> <!-- unrated -->
             <% }; %>
             <label class="checkbox">
-                <input type="checkbox">
+                <input type="checkbox" onchange="ModifyDeletedCoursesList(this, '<%- course.course %>')"/>
             </label>
             <span class="arrow">▼</span>
         </button>
