--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -40,6 +40,7 @@ input[type=text], input[type=password] {
 }
 
 input[type=submit], #addRating {
+  cursor: pointer;
   font-family: 'Comfortaa';
   text-align: center;
   border-radius: 8px;
