--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -35,6 +35,7 @@ input[type=text], input[type=password]{
 }
 
 input[type=submit], #addRating{
+    cursor: pointer;
     font-family: 'Comfortaa';
     text-align: center;
     border-radius: 8px;
