line break less distracting

--- a/public/styles/courseCommentsStyle.css
+++ b/public/styles/courseCommentsStyle.css
@@ -112,6 +112,6 @@ body {
 }
 
 hr {
-  border: 0.3px solid black;
+  border: 0.3px solid gray;
 }
 /*# sourceMappingURL=courseCommentsStyle.css.map */
