reply to comment page/form

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -34,7 +34,7 @@ input[type=text], input[type=password]{
     width: 100%;
 }
 
-input[type=submit], #addRating{
+input[type=submit], #addRating, #addComment{
     cursor: pointer;
     font-family: 'Comfortaa';
     text-align: center;
