--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -39,7 +39,7 @@ input[type=text], input[type=password] {
   width: 100%;
 }
 
-input[type=submit], #addRating {
+input[type=submit], #addRating, #addComment {
   cursor: pointer;
   font-family: 'Comfortaa';
   text-align: center;
