dedicated create department functionality

--- a/public/styles/indexStyle.css
+++ b/public/styles/indexStyle.css
@@ -428,6 +428,11 @@ input::placeholder{
       
   }
 
+  #addDepartment{
+    background-color: #34b5d9;
+    
+}
+
   #modifyCourse{
     background-color: #C18AFF;
   }
