--- a/views/partials/adminDropdown.ejs
+++ b/views/partials/adminDropdown.ejs
@@ -3,6 +3,7 @@
     
     <div id="myDropdown" class="menu-content">
         <a id="addCourse" href="addCourse">Add Course</a>
+        <a id="addDepartment" href="addDepartment">Add Department</a>
         <a id="modifyCourse" href="modifyCourses">Modify Course</a>
         <button type="button" id="removeCourse" onclick="hideButton();removeCoursesHandler();">Remove Course</button>
         <a id="logout" href="/logout">Logout</a>
