--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,20 +41,21 @@
 
     <%- include('./partials/header') %>
 
-    <% Courses.forEach( (course)=> { %>
+    <% Courses?.forEach( (course)=> { %>
     <div class="course-content">
         <button type="button" class="collapsible">
             <%- course.course %>
             <% let avgRating = (Math.round(course.avgRating * 2) / 2).toFixed(1); %>
             <% for (let i = 0; i < avgRating-0.5; i++) { %>
-                <span class="fa fa-star fa-lg checked"></span> <!-- full star -->
+            <span class="fa fa-star fa-lg checked"></span> <!-- full star -->
             <% }; if ((avgRating % 1) === 0.5) { avgRating = Math.round(avgRating); %>
-                <span class="fa fa-star-half-full fa-lg"></span> <!-- half star-->
+            <span class="fa fa-star-half-full fa-lg"></span> <!-- half star-->
             <% }; for (; avgRating < 5; avgRating++) { %>
-                <span class="fa fa-star fa-lg"></span> <!-- unrated -->
+            <span class="fa fa-star fa-lg"></span> <!-- unrated -->
             <% }; %>
             <label class="checkbox">
-                <input class="inputCheckbox" type="checkbox" onchange="ModifyDeletedCoursesList(this, '<%- course.course %>')"/>
+                <input class="inputCheckbox" type="checkbox"
+                    onchange="ModifyDeletedCoursesList(this, '<%- course.course %>')" />
             </label>
             <span class="arrow">▼</span>
         </button>
@@ -62,7 +63,7 @@
             <p><b>Description: </b>
                 <%- course.description %>
             </p>
-            <p><b>Rating: </b><%- course.avgRating %>/5 <b>from</b> <%- course.messages.length %>  <b>students</b></p>
+            <p><b>Rating: </b><%- course.avgRating %>/5 <b>from</b> <%- course.messages.length %> <b>students</b></p>
             <a onclick="reviewButtonHandler('<%- course.course %>')">Add a review</a>
             <p><b>Comments:</b></p>
             <iframe src="courseComments/<%- course.course %> " height="261" width="446" style="border: none;"
@@ -99,46 +100,43 @@
         });
     }
 
-    // TODO: select department and filter and sort working together
     const filterHandler = (lvl) => {
-        var courses = document.getElementsByClassName("course-content");
         if (lvl == "") {
-            for (var i = 0; i < courses.length; i++) {
-                courses[i].style.display = "block";
-            }
+            const url = new URL(window.location);
+            url.searchParams.delete("lvl");
+            document.location.href = url;
         }
         else {
-            for (var i = 0; i < courses.length; i++) {
-                let courseName = courses[i].children[0].innerText.replace(/\s/g, '');
-                if ((courseName.charAt(courseName.length - 3)) === lvl.slice(0, 1)) {
-                    courses[i].style.display = "block";
-                } else {
-                    courses[i].style.display = "none";
-                }
-            }
+            const url = new URL(window.location);
+            url.searchParams.delete("lvl");
+            url.searchParams.append("lvl", lvl);
+            document.location.href = url;
         }
-
     };
 
-    const selectDepartmentHandler = (department) => {
-        var courses = document.getElementsByClassName("course-content");
-        var popularTitle = document.getElementById("popularTitle");
-        if (department == "") {
-            popularTitle.style.visibility = "visible";
-            for (var i = 0; i < courses.length; i++) {
-                courses[i].style.display = "block";
-            }
+    const sortHandler = (sort) => {
+        if (sort == '') {
+            const url = new URL(window.location);
+            url.searchParams.delete("sort");
+            document.location.href = url;
+        } else {
+            const url = new URL(window.location);
+            url.searchParams.delete("sort");
+            url.searchParams.append("sort", sort);
+            document.location.href = url;
         }
-        else {
-            popularTitle.style.visibility = "hidden";
-            for (var i = 0; i < courses.length; i++) {
-                let courseName = courses[i].children[0].innerText.replace(/\s/g, '');
-                if ((courseName.slice(0, 4)) === department) {
-                    courses[i].style.display = "block";
-                } else {
-                    courses[i].style.display = "none";
-                }
-            }
+    }
+
+    const selectDepartmentHandler = (department) => {
+        if (department == '') {
+            const url = new URL(window.location);
+            url.searchParams.delete("department");
+            document.location.href = url;
+        } else {
+            const url = new URL(window.location);
+            url.searchParams.delete("department");
+            url.searchParams.append("department", department);
+            document.location.href = url;
         }
     };
 
@@ -177,7 +175,7 @@
 
         var checkboxes = document.getElementsByClassName("checkbox");
 
-        for (var i = 0; i < checkboxes.length; i++){
+        for (var i = 0; i < checkboxes.length; i++) {
             checkboxes[i].style.display = "inline-flex";
         }
 
@@ -187,21 +185,21 @@
         for (var i = 0; i < coll.length; i++) {
             arrow[i].style.display = "none";
             coll[i].disabled = true;
-            
+
         }
-    }
+    };
 
     const cancelRemoveCoursesHandler = () => {
         hideDeletedCoursesList();
         var checkboxes = document.getElementsByClassName("checkbox");
 
-        for (var i = 0; i < checkboxes.length; i++){
+        for (var i = 0; i < checkboxes.length; i++) {
             checkboxes[i].style.display = "none";
         }
 
         //uncheck all checkboxes
         var checkboxesInput = document.getElementsByClassName("inputCheckbox");
-        for (var i = 0; i < checkboxes.length; i++){
+        for (var i = 0; i < checkboxes.length; i++) {
             checkboxesInput[i].checked = false;
         }
         clearDeletedCoursesList();
@@ -211,9 +209,9 @@
         for (var i = 0; i < coll.length; i++) {
             arrow[i].style.display = "block";
             coll[i].disabled = false;
-        } 
+        }
 
-    }
+    };
 
 </script>
 
