--- a/views/partials/adminDropdown.ejs
+++ b/views/partials/adminDropdown.ejs
@@ -8,7 +8,7 @@
         <button type="button" id="removeCourse" onclick="hideButton();removeCoursesHandler();">Remove Course</button>
         <a id="logout" href="/logout">Logout</a>
     </div>
-    <button id="deleteCourses" style="display:none;" onclick="deleteCoursesHandler();">Delete Courses</button>
+    <button id="deleteCourses" style="display:none;" onclick="displayConfirmation();">Delete Courses</button>
     <button id="cancelRemove" style="display:none;" onclick="showButton();cancelRemoveCoursesHandler();">X</button>
 </div>
 <script>
@@ -72,7 +72,7 @@
 
     // Send delete course request to server
     const deleteCoursesHandler = () => {
-        deleteCoursesList = document.getElementById("deleteCoursesList");
+            deleteCoursesList = document.getElementById("deleteCoursesList");
         Array.from(deleteCoursesList.options).forEach(async (course) => {
             let courseName = course.value;
             const result = await fetch('/api/deleteCourse', {
@@ -95,6 +95,7 @@
 
         alert('Courses deleted successfully');
         window.location = '/';
+        
 
     };
 
